--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,7 @@
   },
   "background": {
     "persistent": true,
-    "scripts": [
-      "background.js"
-    ]
+    "page": "background.html"
   },
   "permissions": [
     "<all_urls>",
