--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,17 @@
     "persistent": true,
     "page": "background.html"
   },
+  "content_scripts": [
+    {
+      "js": [
+        "content.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ],
+      "run_at": "document_start"
+    }
+  ],
   "permissions": [
     "<all_urls>",
     "activeTab",
