--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,10 @@
       "run_at": "document_start"
     }
   ],
+  "options_ui": {
+    "page": "src/app/option/option.html",
+    "open_in_tab": true
+  },
   "icons": {
     "16": "icon.png",
     "32": "icon.png",
