--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,7 @@
       "matches": [
         "<all_urls>"
       ],
+      "match_about_blank": true,
       "run_at": "document_start"
     }
   ],
