--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,7 @@
     "bookmark/simpleScreenshotLevel1.html",
     "bookmark/simpleScreenshotLevel2.html",
     "bookmark/simpleScreenshotLevel4.html",
+    "bookmark/simpleScreenshotLevel4_5.html",
     "bookmark/simpleScreenshotLevel6.html",
     "bookmark/simpleScreenshotLevel8.html",
     "bookmark/simpleScreenshotLevel10.html"
